--- a/app/src/main/res/layout/fragment_buy_tickets.xml
+++ b/app/src/main/res/layout/fragment_buy_tickets.xml
@@ -25,5 +25,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <FrameLayout
+        android:id="@+id/fragment_show_intermediarys"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+    </FrameLayout>
 
+    <FrameLayout
+        android:id="@+id/fragment_confirm_purchase"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        >
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
