--- a/app/src/main/res/layout/fragment_purchase_history.xml
+++ b/app/src/main/res/layout/fragment_purchase_history.xml
@@ -11,9 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
+        android:fontFamily="sans-serif-thin"
+        android:lineSpacingExtra="8sp"
+        android:textColor="@color/white"
         android:text="@string/view_purchase_history"
         android:textSize="23sp"
-        android:textColor="@color/black"
         android:textAlignment="center" />
 
     <androidx.recyclerview.widget.RecyclerView
