--- a/app/src/main/res/layout/purchase_layout.xml
+++ b/app/src/main/res/layout/purchase_layout.xml
@@ -45,7 +45,8 @@
             android:layout_marginTop="8dp"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/textViewEventId"
